updated integration testing

--- a/test/fixtures/pages/archives.rhtml
+++ b/test/fixtures/pages/archives.rhtml
@@ -1,5 +1,11 @@
 <h1><%= @path %></h1>
-<% for entry in archives %>
-  <li class="entry"><%= entry.title %></li>
-<% end %>
+<ul>
+  <% if archives.length > 0 %>
+    <% for article in archives %>
+      <li class="article">
+        <a href="<%= article.path %>"><%= article.title %></a>
+      </li>
+    <% end %>
+  <% end %>
+</ul>
 
